objects/project_cloud__Working_Hours__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define the hours in a day a User works
Currently this is only used by the Profitability &amp; Utilization Extension. It is not used by the Project Cloud package</description>
    <fields>
        <fullName>project_cloud__Availability_Hourspan__c</fullName>
        <defaultValue>&quot;0-2,2-4,4-8,8-*&quot;</defaultValue>
        <description>This field is used by the Resources Load Tab for determining the highlighting of a Users Allocations. It is a Tab separated list of hour intervals. The spans are for highlighting the number in a range: Green, No Highlighting, Yellow, Red e.g 0-4,4-* is green if the number is between 0 and 4, or no highlighting otherwise. 0-2,2-4,4-8,8-* is 0-2 Green, 2-4 No Highlight, 4-8 Yellow, 8+ Red</description>
        <inlineHelpText>Numbers indicate the hours in a day that trigger color changes in loading Green, White, Yellow, Red. 0-2,2-4,4-8,8-* Displays Green under 2 hours, White 2 to 4 hours, Yellow 4-8 hours and Red over 8 hours</inlineHelpText>
        <label>Resource Loading Indicators</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Days_In_Week__c</fullName>
        <description>This custom setting has been deprecated. The values are now project/project task specific.</description>
        <label>Deprecated (Days In Week)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_In_Day__c</fullName>
        <description>This custom setting has been deprecated. The values are now project/project task specific.</description>
        <label>Deprecated (Hours In Day)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Friday__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Hours in Day - Friday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Monday__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Hours in Day - Monday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Saturday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours in Day - Saturday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Sunday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours in Day - Sunday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Thursday__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Hours in Day - Thursday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Tuesday__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Hours in Day - Tuesday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_in_Day_Wednesday__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Hours in Day - Wednesday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Use_Settings_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable calculations of working days on a project or task basis and use the default custom setting exclusively</description>
        <label>Use custom settings only</label>
        <type>Checkbox</type>
    </fields>
    <label>Working Hours</label>
</CustomObject>